--- a/src/main/resources/templates/teachers/index.html
+++ b/src/main/resources/templates/teachers/index.html
@@ -44,7 +44,7 @@
     		</div>
     	</div>
     	<div class="row">
-    		<a href="#">New Teacher</a>
+    		<a href="/teacher/new">New Teacher</a>
     	</div>
     </div>
     
