--- a/src/main/resources/templates/teachers/new.html
+++ b/src/main/resources/templates/teachers/new.html
@@ -23,24 +23,24 @@
 
 		<div class="container">
 			<div class="row">
-				<form action="/teachers" method="POST">
+				<form th:object="${teacherDTO}" action="/teachers" method="POST">
 					<div class="mb-3">
-						<label class="form-label">Name</label> <input class="form-control"
-							type="text" name="name">
-						<div></div>
+						<label class="form-label">Name</label>
+							 <input class="form-control " th:errorclass="is-invalid" type="text" th:field="*{name}">
+						<div class="invalid-feedback" th:errors="*{name}"></div>
 					</div>
 					<div class="mb-3">
-						<label class="form-label">Salary</label> <input
-							class="form-control" type="text" name="salary">
-						<div></div>
+						<label class="form-label">Salary</label>
+						<input class="form-control" th:errorclass="is-invalid" type="text" th:field="*{salary}">
+						<div class="invalid-feedback" th:errors="*{salary}"></div>
 					</div>
 					<div class="mb-3">
-						<label class="form-label">Status</label> <select
-							class="form-select" name="teacherStatus">
-
+						<label class="form-label">Status</label>
+						<select class="form-select" th:field="*{teacherStatus}">
 							<option
-								th:each="status : ${teacherStatus}"
-								th:value="${status}" th:text="${status}"></option>
+								th:each="status : ${teacherStatusList}"
+								th:value="${status}" th:text="${status}">
+							</option>
 						</select>
 					</div>
 					<button class="btn btn-primary" type="submit">Submit</button>
