--- a/src/main/resources/templates/teachers/index.html
+++ b/src/main/resources/templates/teachers/index.html
@@ -1,57 +1,50 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head>
-   
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-    <title>Teachers List</title>
-  </head>
-  <body>
-    <div class="container">
-    	<div class="row">
-    		<h1>Teacher list</h1>
-    	</div>
-    	<div class="row">
-    		<div class="col-12">
-    			<table class="table table-hover">
-    				<thead>
-    					<tr>
-    						<th scope="col">ID</th>
-    						<th scope="col">Name</th>
-    						<th scope="col">Salary</th>
-    						<th scope="col">Status</th>
-    						<th scope="col"></th>
-    						<th scope="col"></th>
-    						<th scope="col"></th>
-    					</tr>
-    				</thead>
-    				<tbody>
-    					<tr th:each="teacher : ${teachers}">
-    						<th class="col-1" scope="row" th:text="${teacher.getId()}">Id</th>
-    						<th class="col-4" th:text="${teacher.name}">Name</th>
-    						<th class="col-2" th:text="${teacher.salary}">Salary</th>
-    						<th class="col-2" th:text="${teacher.teacherStatus.toString()}">Status</th>
-    						<th class="col-1"><a href="#">Details</a></th>
-    						<th class="col-1"><a href="#">Edit</a></th>
-    						<th class="col-1"><a href="#">Delete</a></th>
-    					</tr>
-    				</tbody>
-    			</table>
-    		</div>
-    	</div>
-    	<div class="row">
-    		<a href="/teachers/new">New Teacher</a>
-    	</div>
-    </div>
-    
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{fragments :: head('Teachers')}">
+</head>
+<body>
+	<header th:replace="~{fragments :: header('Teachers List')}"></header>
+	<div class="container">	
+		<div class="row">
+			<div class="col-12">
+				<table class="table table-hover">
+					<thead>
+						<tr>
+							<th scope="col">ID</th>
+							<th scope="col">Name</th>
+							<th scope="col">Salary</th>
+							<th scope="col">Status</th>
+							<th scope="col"></th>
+							<th scope="col"></th>
+							<th scope="col"></th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:each="teacher : ${teachers}">
+							<th class="col-1" scope="row" th:text="${teacher.getId()}">Id</th>
+							<th class="col-4" th:text="${teacher.name}">Name</th>
+							<th class="col-2" th:text="${teacher.salary}">Salary</th>
+							<th class="col-2" th:text="${teacher.teacherStatus.toString()}">Status</th>
+							<th class="col-1"><a href="#">Details</a></th>
+							<th class="col-1"><a href="#">Edit</a></th>
+							<th class="col-1"><a href="#">Delete</a></th>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+		<div class="row">
+			<a href="/teachers/new">New Teacher</a>
+		</div>
+	</div>
 
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-  </body>
+	<!-- Option 1: Bootstrap Bundle with Popper -->
+	<script
+		src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+		crossorigin="anonymous"></script>
+</body>
 </html>
