--- a/src/main/resources/templates/teachers/new.html
+++ b/src/main/resources/templates/teachers/new.html
@@ -1,46 +1,31 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org">
-<head>
-
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
-<!-- Bootstrap CSS -->
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-	rel="stylesheet"
-	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-	crossorigin="anonymous">
-
-<title>New teacher form</title>
+<head th:replace="~{fragments :: head('New Teacher')}">
 </head>
 <body>
+	<header th:replace="~{fragments :: header('New Teacher')}"></header>
 	<div class="container">
-		<div class="row">
-			<h1>New Teacher</h1>
-		</div>
-
 		<div class="container">
 			<div class="row">
 				<form th:object="${teacherDTO}" action="/teachers" method="POST">
 					<div class="mb-3">
-						<label class="form-label">Name</label>
-							 <input class="form-control " th:errorclass="is-invalid" type="text" th:field="*{name}">
+						<label class="form-label">Name</label> <input
+							class="form-control " th:errorclass="is-invalid" type="text"
+							th:field="*{name}">
 						<div class="invalid-feedback" th:errors="*{name}"></div>
 					</div>
 					<div class="mb-3">
-						<label class="form-label">Salary</label>
-						<input class="form-control" th:errorclass="is-invalid" type="text" th:field="*{salary}">
+						<label class="form-label">Salary</label> <input
+							class="form-control" th:errorclass="is-invalid" type="text"
+							th:field="*{salary}">
 						<div class="invalid-feedback" th:errors="*{salary}"></div>
 					</div>
 					<div class="mb-3">
-						<label class="form-label">Status</label>
-						<select class="form-select" th:field="*{teacherStatus}">
-							<option
-								th:each="status : ${teacherStatusList}"
-								th:value="${status}" th:text="${status}">
-							</option>
+						<label class="form-label">Status</label> <select
+							class="form-select" th:field="*{teacherStatus}">
+							<option th:each="status : ${teacherStatusList}"
+								th:value="${status}" th:text="${status}"></option>
 						</select>
 					</div>
 					<button class="btn btn-primary" type="submit">Submit</button>
