--- a/src/main/resources/templates/teachers/new.html
+++ b/src/main/resources/templates/teachers/new.html
@@ -5,35 +5,7 @@
 </head>
 <body>
 	<header th:replace="~{fragments :: header('New Teacher')}"></header>
-	<div class="container">
-		<div class="container">
-			<div class="row">
-				<form th:object="${teacherDTO}" action="/teachers" method="POST">
-					<div class="mb-3">
-						<label class="form-label">Name</label> <input
-							class="form-control " th:errorclass="is-invalid" type="text"
-							th:field="*{name}">
-						<div class="invalid-feedback" th:errors="*{name}"></div>
-					</div>
-					<div class="mb-3">
-						<label class="form-label">Salary</label> <input
-							class="form-control" th:errorclass="is-invalid" type="text"
-							th:field="*{salary}">
-						<div class="invalid-feedback" th:errors="*{salary}"></div>
-					</div>
-					<div class="mb-3">
-						<label class="form-label">Status</label> <select
-							class="form-select" th:field="*{teacherStatus}">
-							<option th:each="status : ${teacherStatusList}"
-								th:value="${status}" th:text="${status}"></option>
-						</select>
-					</div>
-					<button class="btn btn-primary" type="submit">Submit</button>
-					<a href="javascript:history.back()">Cancel</a>
-				</form>
-			</div>
-		</div>
-	</div>
+	<div th:replace="~{teachers/teacher_fragments :: form(TeacherDTO, '/teachers')}">Formulário</div>
 
 
 
