Error and Success messages

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -9,6 +9,8 @@
 	integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
 	rel="stylesheet">
 
+	<link rel="stylesheet" href="/css/style.css">
+
 <title th:text="${title}">Home</title>
 </head>
 
