--- a/src/main/resources/templates/teachers/index.html
+++ b/src/main/resources/templates/teachers/index.html
@@ -5,7 +5,19 @@
 </head>
 <body>
 	<header th:replace="~{fragments :: header('Teachers List')}"></header>
-	<div class="container">
+
+	<div class="container mb-4">
+
+		<div class="col-12">
+
+			<span th:styleappend="${(param.error == null || param.message == null) ? 'display: none;' : ''}"
+				th:classappend="${(param.error != null && param.error) ? 'error-message' : 'success-message'}"
+				th:text="${param.message != null ? param.message : ''}">MSG</span>
+		</div>
+
+	</div>
+
+	<div class="container mt-4">
 		<div class="row">
 			<div class="col-12">
 				<table class="table table-hover">
@@ -26,8 +38,10 @@
 							<th class="col-4" th:text="${teacher.name}">Name</th>
 							<th class="col-2" th:text="${teacher.salary}">Salary</th>
 							<th class="col-2" th:text="${teacher.teacherStatus.toString()}">Status</th>
-							<th class="col-1"><a th:href="@{/teachers/{teacherId}(teacherId = ${teacher.getId()})}">Details</a></th>
-							<th class="col-1"><a th:href="@{/teachers/{teacherId}/edit(teacherId = ${teacher.getId()})}">Edit</a></th>
+							<th class="col-1"><a
+								th:href="@{/teachers/{teacherId}(teacherId = ${teacher.getId()})}">Details</a></th>
+							<th class="col-1"><a
+								th:href="@{/teachers/{teacherId}/edit(teacherId = ${teacher.getId()})}">Edit</a></th>
 							<th class="col-1"><a href="#" data-bs-toggle="modal"
 								th:attr="data-bs-target='#staticBackdrop'+${teacher.id}">Delete</a>
 								<div th:replace="~{teachers/delete-modal :: delete}"></div></th>
