Add New Student

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,7 +14,8 @@
 			<div class="list-group">
 				<button type="button" class="list-group-item list-group-item-action"
 					th:onclick="'window.location.href=\'/teachers\''">Teachers</button>
-				<button type="button" class="list-group-item list-group-item-action">Students</button>
+				<button type="button" class="list-group-item list-group-item-action"
+					th:onclick="'window.location.href=\'/students\''">Students</button>
 			</div>
 		</div>
 
