--- a/src/main/resources/templates/students/index.html
+++ b/src/main/resources/templates/students/index.html
@@ -39,7 +39,7 @@
 							<th class="col-4" th:text="${student.getCourse()}">Course</th>
 							<th class="col-2" th:text="${student.enumCourseType.toString()}">Degree</th>
 							<th class="col-1"><a
-								href="#">Details</a></th>
+								th:href="@{/students/{studentId}(studentId = ${student.getId()})}">Details</a></th>
 							<th class="col-1"><a
 								href="#">Edit</a></th>
 <!--							<th class="col-1"><a href="#" data-bs-toggle="modal"
